improved naming for ConvertableToStream

--- a/src/locale.properties
+++ b/src/locale.properties
@@ -38,8 +38,6 @@ message.organization_removed=Organization has been removed.
 message.unable_to_remove_organization=Organization has been removed.
 message.organization.modification_canceled=Modification has been canceled.
 message.organization.modification_error=Error while modifying organization! One of the arguments was incorrect!
-message.organization.error.already_presented=Organization with the same full name and type is already presented in the collection!
-message.organization.error.already_presented_after_modification=Organization after modification is already presented in the collection with the same full name and type!
 organization.info_message=Collection with organizations, initialization date: %s, number of organizations: %d
 message.collection_cleared=Collection has been cleared.
 message.collection.unable_to_save_to_file=Unable to save collection to file
@@ -75,5 +73,5 @@ organization_builder.input.location.y=location y
 organization_builder.input.location.z=location z
 organization_builder.input.location.name=location name
 organization_builder.input.get=Enter %s%s: 
-message.input.error.semicolon=Semicolon is not allowed in the input. Try again.
-message.start.bad_file.organization_repeated_twice=Bad database. There are at least two organizations with the same full name and type.
+message.input.error.semicolon=Semicolon is not allowed in the input
+input.null=null
