Collection with -> Collection of

--- a/src/locale.properties
+++ b/src/locale.properties
@@ -38,7 +38,7 @@ message.organization_removed=Organization has been removed.
 message.unable_to_remove_organization=Organization has been removed.
 message.organization.modification_canceled=Modification has been canceled.
 message.organization.modification_error=Error while modifying organization! One of the arguments was incorrect!
-organization.info_message=Collection with organizations, initialization date: %s, number of organizations: %d
+organization.info_message=Collection of organizations, initialization date: %s, number of organizations: %d
 message.collection_cleared=Collection has been cleared.
 message.collection.unable_to_save_to_file=Unable to save collection to file
 message.collection.saved_to_file=Collection has been successfully saved to
